--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Orofino Adventure Park — Coming Soon</title>
+  <title>Orofino Adventure Park</title>
   <meta
     name="description"
     content="Orofino Adventure Park — a new outdoor adventure destination coming soon to Clearwater County, Idaho."
@@ -12,78 +12,167 @@
 </head>
 <body>
   <!-- Header -->
-  <header class="sticky top-0 z-30 bg-white/90 backdrop-blur border-b border-slate-200">
-    <div class="max-w-5xl mx-auto flex items-center justify-between px-4 py-3">
-      <a href="/" class="flex items-center gap-2 text-slate-900 no-underline">
-        <span class="font-semibold text-sm sm:text-base tracking-tight">
-          Orofino Adventure Park
-        </span>
+    <!-- Header / Nav -->
+  <header class="site-header">
+    <div class="container header-inner">
+      <a href="#top" class="brand">
+        <img src="assets/images/OrofinoAdventureParkLogo_Revised.png" alt="Orofino Adventure Park logo" class="brand-logo">
+        <span class="brand-text"></span>
       </a>
 
-      <!-- No nav links yet, just future-proof toggle -->
-      <button
-        class="inline-flex items-center justify-center w-10 h-9 rounded-lg border border-slate-200 bg-white text-slate-700 md:hidden"
-        aria-label="Toggle navigation"
-      >
-        <span class="sr-only">Toggle navigation</span>
-        <span class="block w-4 h-px bg-slate-700 mb-1"></span>
-        <span class="block w-4 h-px bg-slate-700 mb-1"></span>
-        <span class="block w-4 h-px bg-slate-700"></span>
-      </button>
+      <nav class="nav" aria-label="Primary">
+        <ul class="nav-list">
+          <li><a href="#activities">Activities</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
-  <!-- Hero / Coming Soon -->
-  <section class="py-16 sm:py-20">
-    <div class="max-w-5xl mx-auto flex flex-col md:flex-row items-center gap-10 px-4">
-      <!-- Text column -->
-      <div class="md:flex-1 space-y-4">
-        <p class="uppercase tracking-[0.16em] text-xs text-slate-500">
-          Clearwater County, Idaho
-        </p>
-        <h1 class="text-3xl sm:text-4xl md:text-5xl font-semibold leading-tight">
-          Orofino Adventure Park<br />
-          <span class="text-emerald-700">Coming Soon</span>
-        </h1>
-        <p class="text-slate-700 text-sm sm:text-base">
-          Nestled just across from downtown Orofino, Idaho, this new 72-acre outdoor
-          recreation destination will feature a world-class disc golf course designed by
-          legendary designer John Houck, an aerial challenge course with zip-lines,
-          white-water kayaking and rafting features, and multi-use hiking &amp; biking trails.
-        </p>
-        <p class="text-slate-700 text-sm sm:text-base">
-          Stay tuned for updates on construction phases, grand-opening dates, and ways you
-          can be part of the build and adventure.
+  <!-- Hero -->
+  <main id="top">
+  <section class="hero" id="hero" data-slide-prefix="assets/heroImages/hero" data-slide-count="8" data-slide-ext="avif"> 
+    <div class="hero-overlay"></div>
+    <div class="container hero-inner">
+      <div class="hero-content">
+        <h1>Orofino Adventure Park</h1>
+        <p class="hero-subtitle">
+          Experience the thrill of nature with disc golf, rafting,
+          mountain biking, and hiking adventures.
         </p>
 
-        <div
-          class="inline-flex items-center gap-3 rounded-full border-2 border-dashed border-slate-200 bg-white/90 px-3 py-2 shadow-sm"
-        >
-          <span
-            class="inline-grid place-items-center w-6 h-6 rounded-full bg-amber-400 text-xs font-bold text-white shadow-[0_0_0_2px_white,0_0_0_3px_rgba(245,158,11,0.9)]"
-          >
-            1
-          </span>
-          <span class="text-xs sm:text-sm text-slate-700">
-            Phase 1: Championship disc golf course &amp; park access in the works.
-          </span>
+        <div class="hero-actions">
+          <a href="#activities" class="btn btn-primary">Explore Activities</a>
+          <a href="#plan" class="btn btn-outline">Plan Your Visit</a>
         </div>
-      </div>
 
-      <!-- Logo / art column -->
-      <div class="md:flex-1 w-full flex justify-center md:justify-end">
-        <div
-          class="relative w-full max-w-xs sm:max-w-sm rounded-3xl border border-slate-100 p-4 flex items-center justify-center"
-        >
-          <img
-            src="./images/OrofinoAdventureParkLogo_Revised.png"
-            alt="Orofino Adventure Park Logo"
-            class="w-full h-auto object-contain drop-shadow-xl"
-          />
-        </div>
+        <!-- Dots will be injected here by JS -->
+        <div class="hero-dots" id="heroDots"></div>
+
+        <!-- Arrows -->
+        <button class="hero-arrow hero-arrow-left" aria-label="Previous slide">
+          &#10094;
+        </button>
+        <button class="hero-arrow hero-arrow-right" aria-label="Next slide">
+          &#10095;
+        </button>
+
+        <a href="#activities" class="scroll-down" aria-label="Scroll to activities">
+          &#x25BC;
+        </a>
       </div>
     </div>
   </section>
+
+
+
+    <!-- Activities Section -->
+    <section class="section activities" id="activities">
+      <div class="container">
+        <header class="section-header">
+          <img src="assets/images/OrofinoAdventureParkLogo_Revised.png" alt="Orofino Adventure Park Logo" class="section-header-image"></img>
+          <h2>Adventure Awaits</h2>
+          <p>
+            From adrenaline-pumping activities to peaceful nature walks,
+            we offer something for every outdoor enthusiast.
+          </p>
+        </header>
+
+        <div class="activity-grid">
+          <!-- Disc Golf -->
+          <article class="activity-card">
+            <figure class="card-image">
+              <img src="assets/images/disc-golfer.avif" alt="Disc golfer throwing in the forest">
+              <figcaption class="card-label">
+                <span class="card-icon">◎</span>
+                <span class="card-title">Disc Golf</span>
+              </figcaption>
+            </figure>
+            <div class="card-body">
+              <p>
+                Challenge yourself on our professionally designed 18-hole disc
+                golf course winding through beautiful forest terrain.
+              </p>
+            </div>
+          </article>
+
+          <!-- White Water Rafting -->
+          <article class="activity-card">
+            <figure class="card-image">
+              <img src="assets/images/rafting.avif" alt="Group white water rafting on a river">
+              <figcaption class="card-label">
+                <span class="card-icon">≈</span>
+                <span class="card-title">White Water Rafting</span>
+              </figcaption>
+            </figure>
+            <div class="card-body">
+              <p>
+                Experience the rush of navigating thrilling rapids with our
+                expert guides on the pristine Clearwater River.
+              </p>
+            </div>
+          </article>
+
+          <!-- Mountain Biking -->
+          <article class="activity-card">
+            <figure class="card-image">
+              <img src="assets/images/biking.avif" alt="Mountain biker riding forest singletrack">
+              <figcaption class="card-label">
+                <span class="card-icon">🚵</span>
+                <span class="card-title">Mountain Biking</span>
+              </figcaption>
+            </figure>
+            <div class="card-body">
+              <p>
+                Ride miles of purpose-built singletrack through mossy forests,
+                rolling ridgelines, and stunning river overlooks.
+              </p>
+            </div>
+          </article>
+
+          <!-- Hiking -->
+          <article class="activity-card">
+            <figure class="card-image">
+              <img src="assets/images/hiking.avif" alt="Hiker overlooking mountains at sunset">
+              <figcaption class="card-label">
+                <span class="card-icon">🥾</span>
+                <span class="card-title">Hiking & Nature Walks</span>
+              </figcaption>
+            </figure>
+            <div class="card-body">
+              <p>
+                Slow down and explore scenic trails, waterfalls, and peaceful
+                forest paths perfect for families and casual hikers.
+              </p>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Simple placeholder sections for the nav links -->
+    <section class="section" id="plan">
+      <div class="container">
+        <h2>Plan Your Visit</h2>
+        <p>Details about tickets, hours, lodging, and group packages go here.</p>
+      </div>
+    </section>
+
+    <section class="section" id="about">
+      <div class="container">
+        <h2>About</h2>
+        <p>Share the story and mission of Orofino Adventure Park.</p>
+      </div>
+    </section>
+
+    <section class="section" id="contact">
+      <div class="container">
+        <h2>Contact</h2>
+        <p>Contact form or contact information goes here.</p>
+      </div>
+    </section>
+  </main>
 
   <!-- Footer -->
   <footer class="bg-slate-950 text-slate-200 mt-8">
@@ -106,7 +195,12 @@
     </div>
   </footer>
 
-  <script src="main.js"></script>
+  <script>
+    // Simple current year in footer
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+  <script src="./js/hero-rotator.js"></script>
+
 </body>
 
 </html>
