--- a/index.html
+++ b/index.html
@@ -40,6 +40,83 @@
 
   <!-- Hero -->
   <main id="top">
+    <section
+  id="hero"
+  class="hero relative flex min-h-[90vh] items-center justify-center text-center text-white bg-cover bg-center bg-no-repeat"
+  data-slide-prefix="assets/heroImages/hero"
+  data-slide-count="8"
+  data-slide-ext="avif"
+>
+  <!-- Overlay -->
+  <div
+    class="absolute inset-0 bg-[radial-gradient(circle_at_10%_0%,rgba(0,0,0,0.1),transparent_40%),linear-gradient(to_bottom,rgba(0,0,0,0.7),rgba(0,0,0,0.4))]"
+  ></div>
+
+  <div class="relative z-[1] mx-auto w-full max-w-[1120px] px-5 pt-[5.5rem] pb-12">
+    <div class="mx-auto max-w-[640px]">
+      <h1 class="mb-2 text-[2.4rem] md:text-[3rem] lg:text-[3.5rem] font-semibold">
+        Orofino Adventure Park
+      </h1>
+
+      <p class="mb-7 text-[1.05rem] leading-relaxed">
+        Experience the thrill of nature with disc golf, rafting,
+        mountain biking, and hiking adventures.
+      </p>
+
+      <!-- Buttons -->
+      <div class="mb-7 flex flex-wrap justify-center gap-4">
+        <a
+          href="#activities"
+          class="inline-flex items-center justify-center rounded-full border-2 border-[var(--green-500)] bg-[var(--green-500)] px-6 py-3 text-[0.95rem] font-semibold text-white shadow-[0_14px_30px_rgba(0,0,0,0.25)] transition
+                 hover:-translate-y-px hover:border-[var(--green-600)] hover:bg-[var(--green-600)]"
+        >
+          Explore Activities
+        </a>
+
+        <a
+          href="#plan"
+          class="inline-flex items-center justify-center rounded-full border-2 border-white bg-transparent px-6 py-3 text-[0.95rem] font-semibold text-white transition
+                 hover:bg-white/10"
+        >
+          Plan Your Visit
+        </a>
+      </div>
+
+      <!-- Dots injected by JS -->
+      <div id="heroDots" class="mb-3 flex justify-center gap-1.5"></div>
+    
+      <!-- Arrows -->
+      <button
+        data-hero-arrow="prev"
+        aria-label="Previous slide"
+        class="absolute left-6 top-1/2 flex h-10 w-10 -translate-y-1/2 items-center justify-center rounded-full border-0 bg-black/40 text-[1.3rem] text-white transition
+              hover:scale-105 hover:bg-black/65">
+        &#10094;
+      </button>
+
+      <button
+        data-hero-arrow="next"
+        aria-label="Next slide"
+        class="absolute right-6 top-1/2 flex h-10 w-10 -translate-y-1/2 items-center justify-center rounded-full border-0 bg-black/40 text-[1.3rem] text-white transition
+              hover:scale-105 hover:bg-black/65">
+        &#10095;
+      </button>
+
+
+      <!-- Scroll-down pill -->
+      <a
+        href="#activities"
+        class="mt-2 inline-flex h-8 w-8 items-center justify-center rounded-full border border-white/70 text-[1.1rem] text-white"
+        aria-label="Scroll to activities"
+      >
+        &#x25BC;
+      </a>
+    </div>
+  </div>
+</section>
+
+    xxxxx
+    
   <section class="hero" id="hero" data-slide-prefix="assets/heroImages/hero" data-slide-count="8" data-slide-ext="avif"> 
     <div class="hero-overlay"></div>
     <div class="container hero-inner">
@@ -71,7 +148,7 @@
         </a>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
 
