style: add custom font for hero and shadow

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     name="description"
     content="Orofino Adventure Park — a new outdoor adventure destination coming soon to Clearwater County, Idaho."
   />
+
+  <!-- Google Fonts: Antonio -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@400;600;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
@@ -271,7 +277,7 @@
 
       <div class="relative z-[1] mx-auto w-full max-w-[1120px] px-5 pt-[5.5rem] pb-12">
         <div class="mx-auto max-w-[640px]">
-          <h1 class="mb-2 text-[2.4rem] md:text-[3rem] lg:text-[3.5rem] font-semibold">
+          <h1 class="hero-title mb-2 text-[2.4rem] md:text-[3rem] lg:text-[3.5rem] font-semibold">
             Orofino Adventure Park
           </h1>
 
